adding first improvements
